--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^7.0.0",
+    "mongoose": "^4.4.19",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.4.6"
+  },
+  "devDependencies": {
+    "mongoose-text-search": "0.0.2"
   }
 }
